--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <p>Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
                 <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
             </div>
-            <img src="../images/logo.png" alt="Company Logo">
+            <img src="https://thegreenfort.com/images/logo.png" alt="Company Logo">
         </div>
 
         <div class="invoice-copy-type">
