--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             </div>
             <div>
                 <label for="remarks">Remarks:</label>
-                <input type="text" id="remarks" name="remarks" class="remarks" placeholder="Enter remarks here...">
+                <input type="text" id="remarks" name="remarks" class="remarks">
             </div>
             <div>
                 <h4>Payment Details:</h4>
