--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
             <label for="copy-type">Copy Type:</label>
             <select id="copy-type" onchange="updateCopyType()">
                 <option value="Original for Recipient">Original for Recipient</option>
-                <option value="Original for Transporter">Original for Transporter</option>
-                <option value="Duplicate for Supplier">Duplicate for Supplier</option>
+                <option value="Original for Transporter">Duplicate for Transporter</option>
+                <option value="Duplicate for Supplier">Triplicate for Supplier</option>
                 <option value="Estimate">Estimate</option>
             </select>
         </div>
