--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                 <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
             </div>
             <img src="./images/logo.png" alt="Company Logo">
+            <p>Building a Greener, Stronger Tomorrow</p>
         </div>
 
         <div class="invoice-copy-type">
