--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             margin: auto;
         }
 
+        .slogan {
+            margin-top: 5px;
+            font-style: italic;
+            font-size: 1.1em;
+            color: #666;
+        }
+
         .tax-invoice-title {
             text-align: center;
             font-size: 24px;
@@ -194,8 +201,9 @@
                 <p>Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
                 <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
             </div>
-            <img src="./images/logo.png" alt="Company Logo"><br>
-            <p>Building a Greener, Stronger Tomorrow</p>
+            <img src="./images/logo.png" alt="Company Logo">
+            <p class="slogan">Building a Greener, Stronger Tomorrow</p>
+        
         </div>
 
         <div class="invoice-copy-type">
