--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <p>Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
                 <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
             </div>
-            <img src="./images/logo.png" alt="Company Logo">
-            <p class="slogan">Building a Greener, Stronger Tomorrow</p>
+            <img src="./images/logo.png" alt="Company Logo"><br>
+            <p><i>Building a Greener, Stronger Tomorrow</i></p>
         
         </div>
 
