--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         }
 
         .tagline {
-            color: #07943f; /* Set the text color */
+            color: #000000; /* Set the text color */
             text-align: center; /* Center the text */
             font-size: 14px; /* Set the font size */
-            margin-top: 5px; /* Add some space above the text */
+            margin-top: 0px; /* Add some space above the text */
             display: block; /* Ensure the text is treated as a block element */
         }
 /* New CSS End */
