--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         .tagline {
             color: #000000; /* Set the text color */
             text-align: center; /* Center the text */
-            font-size: 14px; /* Set the font size */
-            margin-top: 0px; /* Add some space above the text */
+            font-size: 10px; /* Set the font size */
+           /* margin-top: 0px;  Add some space above the text */
             display: block; /* Ensure the text is treated as a block element */
         }
 /* New CSS End */
