--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
         .invoice-header img {
             display: block; /* Ensure the image is treated as a block element */
             margin: 0 auto; /* Center the image */
+            margin-bottom: -5px;
         }
 
         .tagline {
             color: #000000; /* Set the text color */
             text-align: center; /* Center the text */
             font-size: 10px; /* Set the font size */
-           /* margin-top: 0px;  Add some space above the text */
+            margin-top: -5px;  /* Negative Margin at Top */
             display: block; /* Ensure the text is treated as a block element */
         }
 /* New CSS End */
