--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
             <div>
                 <h4>Payment Details:</h4>
                 <b>UPI Number:</b> 9809289089<br>
+                <b>Account Holder Name:</b> Greenfort Materials<br>
                 <b>Bank Name:</b> State Bank of India<br>
                 <b>Account Number:</b> 43335895627<br>
                 <b>IFSC Code:</b> SBIN0070045<br>
