--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             background-color: #f4f4f4;
         }
 
+        .payment-details {
+            font-size: 8px;
+        }
+
         .invoice {
             background-color: #fff;
             border-radius: 8px;
@@ -305,7 +309,7 @@
                 <label for="remarks">Remarks:</label>
                 <input type="text" id="remarks" name="remarks" class="remarks" placeholder="Enter remarks here...">
             </div>
-            <div>
+            <div class="payment-details">
                 <h4>Payment Details:</h4>
                 <b>UPI Number:</b> 9809289089<br>
                 <b>Account Holder Name:</b> Greenfort Materials<br>
