--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="invoice-header">
             <div>
                 <h1>GreenFort Materials</h1>
-                <p>Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
+                <p style="font-size: 14px;">Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
                 <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
             </div>
            <!-- <img src="./images/logo.png" alt="Company Logo">--> <!--Old Logo-->
