--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
             <div>
                 <h1>GreenFort Materials</h1>
                 <p style="font-size: 14px;">Hamza's Thekathil Kada Junction,<br>Kaniyapuram P.O,<br>Thiruvananthapuram, 695301
-                <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p>
+                <br>Phone: +91 9809289089 | Email: greenfortmaterials@gmail.com</p><br>
+                <p>GSTIN: 32BHKPR9859Q1Z4</p>
             </div>
            <!-- <img src="./images/logo.png" alt="Company Logo">--> <!--Old Logo-->
             <div style="text-align: center;">
