--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 </head>
 <body>
     <div class="invoice">
-        <div class="tax-invoice-title" id="print-title" style="display: none;">Tax Invoice</div>
+        <div class="tax-invoice-title" id="print-title" style="display: none;">Proforma Invoice</div>
         <p id="selected-copy-type" style="display: none;"></p>
         <div class="invoice-header">
             <div>
