--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
             </div>
             <div>
                 <label for="customer-name">Customer Name:</label>
-                <input type="text" id="customer-name" name="customer-name">
+               <!-- <input type="text" id="customer-name" name="customer-name"> -->
+                <textarea id="customer-name" name="customer-name" rows="10" style="height: 125px;"></textarea>
             </div>
             <div>
                 <label for="customer-address">Customer Address:</label>
