--- a/index.html
+++ b/index.html
@@ -241,11 +241,12 @@
             </div>
             <div>
                 <label for="customer-name">Customer Name:</label>
-                <input type="text" id="customer-name" name="customer-name">
+                <!-- <input type="text" id="customer-name" name="customer-name"> -->
+                <textarea id="customer-name" name="customer-name" rows="10" style="height: 125px;"></textarea>
             </div>
             <div>
                 <label for="customer-address">Customer Address:</label>
-                <textarea id="customer-address" name="customer-address" rows="4" style="height: 75px;"></textarea>
+                <textarea id="customer-address" name="customer-address" rows="10" style="height: 125px;"></textarea>
             </div>
             <div>
                 <label for="payment-mode">Payment Mode:</label>
