--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
         .amount-in-words {
             width: 100%;
             margin-top: 10px;
-            font-size: 12px;
+            font-size: 15px;
         }
 
         .remarks {
             width: 100%;
             margin-top: 10px;
-            font-size: 12px;
+            font-size: 15px;
         }
     </style>
 </head>
@@ -233,7 +233,7 @@
         <div class="invoice-details">
             <div>
                 <label for="invoice-number">Invoice #:</label>
-                <input type="text" id="invoice-number" name="invoice-number" value="1234">
+                <input type="text" id="invoice-number" name="invoice-number" value="">
             </div>
             <div>
                 <label for="invoice-date">Date:</label>
