--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         .amount-in-words {
             width: 100%;
-            margin-top: 5px;
+            margin-bottom: 10px;
             font-size: 15px;
         }
 
